--- a/about.html
+++ b/about.html
@@ -34,12 +34,12 @@
       <hr style="height:1px; border:none; background-color:#333;"/>
       <div class="col-md-6 col-lg-8">
         <h2>Bio (Somewhat short, I know)</h2>
-        <p>My name is Dallin Snell. My dad has been in the United States military for my entire life. Because of that, I haven't lived in one place longer than three to four years. I am currently studying Computer Science at Brigham Young University-Idaho in Rexburg, Idaho. Even though I've lived all over the country, I claim Alabama as my home. (War Eagle!)</p>
+        <p>My name is Dallin Snell. My dad has been in the United States military for my entire life. Because of that, I haven't lived in one place longer than three to four years. I was born in Oklahoma, but most recently lived in Alabama and Utah. Even though I've lived all over the country, I claim Alabama as my home. (War Eagle!) I am currently studying Computer Science at Brigham Young University-Idaho in Rexburg, Idaho.</p>
 
         <h2>Interests</h2>
         <h3>TV</h3>
         <p>I've had a revived interest in TV shows in the past two years or so. One show I'm really into is Game of Thrones (yes, I know, everybody is in to it too). I'm waiting (with bated breath) for the eighth season to come out; but who isn't, right? I also watch Ballers (finished the last season last night). As for non-HBO shows, I watch Burn Notice (the one with Jeffrey Donovan and Gabrielle Anwar) and Life (starring Damian Lewis and Adam Arkin).</p>
-        <p>I also enjoying going to the theater to watch new movies, but I'm a poor college student so that doesn't happen as often as I'd like. I did go and see <i>Geostorm</i> recently. It was decent. Not quite what I expected, but definitely a good watch. <i>Flatlines</i> was also good. It almost looked like the producers were trying for a scientific horror; so if you're easily scared, stay away. There was a guy in the theater who would scream at every intense part (Seriously, even if it wasn't scary and was just slightly intense, he would jump and yell. It was great.).</p>
+        <p>I also enjoying going to the theater to watch new movies, but I'm a poor college student so that doesn't happen as often as I'd like. I did go and see <i>Geostorm</i> recently. It was decent. Not quite what I expected, but definitely a good watch. <i>Flatlines</i> was also good. It almost looked like the producers were trying for a scientific horror; so if you're easily scared, stay away. There was a guy in the theater who would scream at every intense part (Seriously, even if it wasn't scary and was just slightly intense, he would jump and yell. It was great.). <i>Jumanji</i> was fantastic! The actors did a phenomenal job while filming; however, I feel that Jack Black and Kevin Hart really made the movie. Definitely a must-see.</p>
         <h3>Exercising</h3>
         <p>I've always had a love for exercising. Since for as long as I can remember, I have loved to get up and work my body. Whether it's hitting the gym, swimming, running, or hiking I love it! I mostly do bodyweight exercises now, because I don't have as much time as I used to.</p>
         <h3>Computers</h3>
@@ -55,7 +55,7 @@
     </div>
     <footer style="padding: 10px">
       <div style="text-align: right;">
-        <p>Updated: 15 DEC 2017</p>
+        <p>Updated: 13 JAN 2018</p>
       </div>
     </footer>
   </body>
