--- a/music.html
+++ b/music.html
@@ -41,15 +41,15 @@
 
       <div id="content" class="col-md-6 col-lg-9">
         <!-- content -->
-        <p><!-- short page explaination -->Music is a huge part of my life. </p>
+        <p><!-- short page explaination -->Music is a huge part of my life. Because of that, I've listened to everything from Eminem to Trans-Siberian Orchestra to Lecrae and NF and more. Music inspires me and--I feel--makes me a better person. Here is a collection of some artists who I feel have influenced me in my life. </p>
         <p><i>&emsp;Content:</i></p>
         <ul>
           <li>Christian rappers</li>
           <ul>
             <li><a href="#lecrae">Lecrae</a></li>
             <li><a href="#flame">Flame</a></li>
-            <li><a href="#thisl"><del>Thi'sl</del></a></li>
-            <li><a href="#kj52"><del>KJ-52</del></a></li>
+            <li><a href="#thisl">Thi'sl</a></li>
+            <li><a href="#kj52">KJ-52</a></li>
             <li><a href="#kb"><del>KB</del></a></li>
             <li><a href="#minor"><del>Derek Minor</del></a></li>
             <li><a href="#canon"><del>Canon</del></a></li>
@@ -88,7 +88,7 @@
           <br/><br/><p>Marcus Tyrone Gray--born September 16, 1981 in St. Louis, Missouri--started his Christian rap career in his home town. Flame became his stage name in 2004 when he started with Cross Movement Records. In 2010, Flame started his own record company, <a href="https://clearsightmusic.com/" target="_blank">Clear Sight Records</a>. For a more detailed biography, you can go <a href="http://www.newreleasetoday.com/artistdetail.php?artist_id=385" target="_blank">here</a>.</p>
           <p>This video is <i>Whole 9</i> with Mike REAL. It's one of the more recent videos on Flame's YouTube page (linked below the video).</p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/tq3vMXJH1HM?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-          <br/><br/><p>This is another video by Flame (<i>Start Over</i> featuring NF) has always been one of my favorites.</p>
+          <br/><br/><p>This is another video by Flame (<i>Start Over</i> featuring NF) which has always been one of my favorites for a while.</p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/Ms1uqdX6wXY?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
           <!-- Flame: social media -->
           <br/><br/>  <p>Flame on social media:</p>
@@ -102,9 +102,11 @@
           <!-- Thi'sl -->
           <h4>Thi'sl</h4>
           <img src="http://rapzilla.com/rz/images/thisl-3-eps.jpg" width="308" height="185" alt="Photo of Thi'sl"/>
-          <br/><br/><p><!-- short bio -->Travis Tremayne Tyler was born on March 17, 1977. </p>
-          <p><!-- video introduction --></p>
-          <!-- video code -->
+          <br/><br/><p><!-- short bio -->Travis Tremayne Tyler was born on March 17, 1977 in Greenwood, Mississippi. Thi'sl has been rapping since he was fourteen years old. He has been associated with 116 Clique, Reach Records, and Full Ride Music Group. Full Ride Music is owned by Thi'sl and was previously named X-Hustler Music. Thi'sl's website can be found <a href="https://iamthisl.com/" target="_blank">here</a>.</p>
+          <p>In this song, Thi'sl talks about his devotion to Christ--even if that devotion someday leads to the end of his mortal life.</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/94KGfRsfnj0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <br/> <br/> <p>This song I really enjoy. Thi'sl talks about the atonement of Christ and how we are all loved by Him no matter what we've done.</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/0q5GAreYdrs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           <!-- Thi'sl: social media -->
           <br/><br/>  <p>Thi'sl on social media:</p>
           &emsp;  <!-- indent social media buttons slightly -->
@@ -117,16 +119,16 @@
           <!-- KJ-52 -->
           <h4>KJ-52</h4>
           <img src="http://rapzilla.com/rz/images/KJ-52_mental_press.jpg" width="308" height="173" alt="Photo of KJ-52"/>
-          <br/><br/><p><!-- short bio --></p>
-          <p><!-- video introduction --></p>
-          <!-- video code -->
+          <br/><br/><p><!-- short bio -->Jonah Kirsten Sorrentino (later known by his stage name KJ-52) was born in Tampa, Florida on June 26, 1975. Because of the amount of tours he takes yearly, KJ-52 has become known as the "most visible hip-hop artist in the industry". He's performed with Andy Mineo, Lecrae, and Toby Mac. You can see where he will be performing next <a href="https://www.kj52.com/shows" target="_blank">here</a>. KJ-52 is a very passionate artist who knows that without Christ, he would be nothing. </p>
+          <p>Here is one of KJ-52's most recent videos: <i>Island of the Misfit Toys</i>. Speaking of his own past, KJ-52 reaches out to touch and help those who may feel like they don't fit in or feel "misfit".</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/ixyY4qTG3A8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           <!-- KJ-52: social media -->
           <br/><br/>  <p>KJ-52 on social media:</p>
           &emsp;  <!-- indent social media buttons slightly -->
-          <a href="#" class="fa fa-facebook" target="_blank"></a>
-          <a href="#" class="fa fa-twitter" target="_blank"></a>
-          <a href="#" class="fa fa-instagram" target="_blank"></a>
-          <a href="#" class="fa fa-youtube-play" target="_blank"></a>
+          <a href="https://www.facebook.com/kj52/" class="fa fa-facebook" target="_blank"></a>
+          <a href="https://twitter.com/kj52" class="fa fa-twitter" target="_blank"></a>
+          <a href="https://www.instagram.com/kj52instagram/?hl=en" class="fa fa-instagram" target="_blank"></a>
+          <a href="https://www.youtube.com/channel/UCrd8xwFSXYAtFiTZR-H_V7Q" class="fa fa-youtube-play" target="_blank"></a>
         </div>          <br/><br/><br/>
         <div id="kb">
           <!-- KB -->
@@ -289,7 +291,7 @@
     </div>
     <footer style="padding: 10px;">
       <div style="text-align: right;">
-        <p><a href="#">Go to top</a>&emsp;Updated: 27 DEC 2017</p>
+        <p><a href="#">Go to top</a>&emsp;Updated: 13 JAN 2018</p>
       </div>
     </footer>
   </body>
