--- a/cheese.html
+++ b/cheese.html
@@ -34,7 +34,7 @@
         <li class="page_links"><a href="./squirrels.html">Squirrels</a></li>
       </ul>
       <figure>
-        <img src="./images/cheese/cheese_banner.jpg" alt="cheese banner image" height="226"/>
+        <img src="./images/cheese/cheese_banner.jpg" alt="cheese banner image" width="1480"/>
         <figcaption></figcaption>
       </figure>
     </header>
