--- a/tutorials/c.html
+++ b/tutorials/c.html
@@ -153,7 +153,25 @@
             <figcaption>"read_from_file" Unix executable in action</figcaption>
           </figure> <br/>
           <p>If you would like to download this source code, <a href="./../files/tutorials/c/read_from_file.c" download>here</a> is the link. <br/> The binary for a Cygwin system on Windows can be found <a href="./../files/tutorials/c/read_from_file_cygwin.exe" download>here</a> (built on Windows 10). <br/> The binary for a Unix system (i.e. Linux or Mac OS) can be found <a href="./../files/tutorials/c/read_from_file_unix.out" download><del>here</del></a> (built on Kali Linux 3.20.2).</p>
-        </div>
+
+          <br/> <br/>
+          <p> The source is found below.</p>
+          <figure class="figure" id="conditional_source_fig">
+            <img src="./../images/tutorials/c/conditional_source.png" alt="conditional_source_image"/>
+            <figcaption>"conditional" source (pg. 25)</figcaption>
+          </figure> <br/>
+          <p>I felt <code>main</code> could hold all the code. The book has the magic code in a procedure, but I didn't see a reason to do so with this simple example.</p>
+          <p>Here are the screenshots for the binaries being run:</p>
+          <figure class="figure" id="conditional_cygwin_fig">
+            <img src="./../images/tutorials/c/conditional_cygwin_screenshot.png" alt="Cygwin executable inaction screenshot"/>
+            <figcaption>"conditional" Cygwin executable in action</figcaption>
+          </figure> <br/>
+          <figure class="figure" id="conditional_unix_fig">
+            <img src="./../images/tutorials/c/conditional_unix_screenshot.png" alt="Unix executable inaction screenshot"/>
+            <figcaption>"conditional" Unix executable in action</figcaption>
+          </figure> <br/>
+          <p>If you would like to download this source code, <a href="./../files/tutorials/c/conditional.c" download>here</a> is the link. <br/> The binary for a Cygwin system on Windows can be found <a href="./../files/tutorials/c/conditional_cygwin.exe" download>here</a> (built on Windows 10). <br/> The binary for a Unix system (i.e. Linux or Mac OS) can be found <a href="./../files/tutorials/c/conditional_unix.out" download><del>here</del></a> (built on Kali Linux 3.20.2).</p>
+        </div> <!-- end of examples div -->
         <br/> <br/>
         <div id="prototypes">
           <h4>Prototypes</h4>
