updated tutorials slightly
* minor updates to c.html

--- a/tutorials/c.html
+++ b/tutorials/c.html
@@ -1,6 +1,6 @@
 <!-- Snell, Dallin
-  -- 10 JAN 2018
-  -- C tutorial
+  ** 10 JAN 2018
+  ** C tutorial
 -->
 
 <!DOCTYPE html>
@@ -59,7 +59,7 @@
         </div> <br/>
         <div id="vars">
           <h4>Variables</h4>
-          <p></p>
+          <p>Variables are containers for data. There are a number of variable types in C: <code>int</code>, <code>char</code>, <code>float</code>, <code>double</code>, <code>short</code>, being some of the most common. Variable names, themselves, must follow specific conventions in order to be recognized by the C compiler. Variable names must begin with an underscore ("_") or letter (uppercase or lowercase). </p>
         </div> <br/>
         <div id="print">
           <h4>Printing to the console</h4>
