slight changes to cheese.html
* slight formatting changes

--- a/cheese.html
+++ b/cheese.html
@@ -26,7 +26,7 @@
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div> -->
 
-    <header style="padding: 10px;">
+    <header>
       <ul class="page_links">
         <li class="page_links"><a href="./index.html">Home</a></li>
         <li class="page_links"><a href="./inspiration.html">Inspiration</a></li>
